<?xml version="1.0"?>
<package format="2">
  <name>phm_reliability_calculation</name>
  <version>1.0.0</version>
  <description>The phm_reliability_calculation package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>
  <maintainer email="elcin.erdogan@inovasyonmuhendislik.com">Elcin ERDOGAN</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>

  <test_depend>rosunit</test_depend>
  
  <export>
    
  </export>
</package>
