<?xml version="1.0"?>
<package format="2">
  <name>phm_start</name>
  <version>0.0.0</version>
  <description>The start_gui package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>phm_reliability</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>phm_reliability</build_export_depend>
  <exec_depend>phm_reliability</exec_depend>


  <test_depend>rosunit</test_depend>

  <export>
    
  </export>
</package>
