<?xml version="1.0"?>
<package>
  <name>phm_tools</name>
  <version>0.0.0</version>
  <description>The phm_tools meta package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <run_depend>phm_reliability</run_depend>
  <run_depend>phm_mission_analyze</run_depend>
  <run_depend>phm_task_plan</run_depend>

  
  <export>
    <metapackage/>
  </export>
</package>
