<?xml version="1.0"?>
<package format="2">
  <name>phm_tools</name>
  <version>1.0.1</version>
  <description>The phm_tools package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>
  <maintainer email="elcin.erdogan@inovasyonmuhendislik.com">Elcin ERDOGAN</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
